Do some changes in the Database and also change the models for thoes part

--- a/PlottedAssist/Views/Dashboard/Delete.cshtml
+++ b/PlottedAssist/Views/Dashboard/Delete.cshtml
@@ -29,6 +29,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.plantNickName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.plantNickName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.PlantWaterFrq)
         </dt>
 
