--- a/PlottedAssist/Views/Dashboard/Details.cshtml
+++ b/PlottedAssist/Views/Dashboard/Details.cshtml
@@ -28,6 +28,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.plantNickName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.plantNickName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.PlantWaterFrq)
         </dt>
 
