--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -19,6 +19,9 @@
             @Html.DisplayNameFor(model => model.UserId)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.plantNickName)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.PlantWaterFrq)
         </th>
         <th>
@@ -49,6 +52,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UserId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.plantNickName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PlantWaterFrq)
