--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -73,13 +73,25 @@
             @Html.DisplayNameFor(model => model.PlantHabitat)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PlantAnimal)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.PlantDroughtTol)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PlantCompanion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PlantBird)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PlantButterfly)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PlantBees)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PlantInsects)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PlantLarve)
         </th>
         <th></th>
     </tr>
@@ -147,13 +159,25 @@
             @Html.DisplayFor(modelItem => item.PlantHabitat)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.PlantAnimal)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.PlantDroughtTol)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PlantCompanion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PlantBird)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PlantButterfly)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PlantBees)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PlantInsects)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PlantLarve)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
