--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -22,8 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Indigene", "Index", "PlantSets")</li>
+                    <li>@Html.ActionLink("Invasion", "Index", "WeedSets")</li>
+                    <li>@Html.ActionLink("My Plant", "Index", "Dashboard")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -33,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Plotted Assist</p>
         </footer>
     </div>
 
