Plant list page V.1

--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -9,8 +9,20 @@
     };
 }
 
+<!--Header-->
+
+    <div style="background-image:url(../Picture/header_picture.jpg);width:auto;height:400px;padding=0px;margin=0px;">
+        <div style="text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
+            <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
+        </div>
+        <div style="text-align:center;height:auto;width:auto;padding-top:85%;padding-left:55%;padding-right:30%;">
+            <p style="font-family:'Arial';color:black;background:white;font-size:10px;text-align:center">in Yarra City</p>
+        </div>
+    </div>
+    
 <h2>Index</h2>
 
+<div> </div>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -43,6 +55,11 @@
              new AjaxOptions { UpdateTargetId = "tableBody" });
 </div>
 }
+<!--Plant display-->>
+<div>
+
+</div>
+
     <table class="table">
         <tr>
             <th>
