change some element position

--- a/PlottedAssist/Content/Site.css
+++ b/PlottedAssist/Content/Site.css
@@ -3,10 +3,16 @@
     padding-bottom: 20px;
 }
 
+/* Remove the padding of the default bootstrap setting*/
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
