--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -30,14 +30,17 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container-fluid body-content" style="padding-right:0px;padding-left:0px;">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Plotted Assist</p>
+    </div>
+    <div class="container-fluid body-content" style="padding-right:0px;padding-left:0px;">
+        <footer style="background-color:black;margin:0px">
+            <br>
+            <p style="text-align:center;">&copy; @DateTime.Now.Year - Plotted Assist</p>
+            <br>
         </footer>
     </div>
-
+    
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
