--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a class="navbar-brand" href="~/Home/index.html" style="padding:0px;"><img id="logo" src="Picture/logo.png" height="50"></a>           
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
