plant picture div

--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -21,10 +21,10 @@
 </div>
 
 <div class="col-md-12" style="background-color:#011f35">
-    <div class="col-0 col-md-2" >
+    <div class="col-0 col-md-2" style="background:black">
         <br>
     </div>
-    <div class="col-12 col-md-8" style="">
+    <div class="col-12 col-md-8" style="background:red">
         <br>
         <br>
         <br>
