--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -56,11 +56,10 @@
 }
 
 <!--Plant display-->
-<div class="col-sm-2">
-    <div style="">
-        <img src="">
+<div class="row">
+    <div class="col-7 col-md-4" style="background:url(../Picture/header_picture.jpg);border-radius:10px;box-shadow:0px 0px 10px grey inset">
+        <div style="padding-top:70%;font-size:12px;color:white;border-radius:10px;background-color:transparent;font-family:'Arial'">plant name</div>
     </div>
-    <div style="padding-top:12px;font-size:12px;color:black;text-align:center;">plant name</div>
 </div>
 
 <table class="table">
