plant list, questionnaire

--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -21,21 +21,111 @@
 </div>
 
 <div class="col-md-12" style="background-color:#011f35">
-    <div class="col-0 col-md-2" style="background:black">
-        <br>
-    </div>
-    <div class="col-12 col-md-8" style="background:red">
-        <br>
-        <br>
-        <br>
+    <div class="col-12 col-md-8" style="background:white;text-align:center">
+        <H3>Let us help you decide which to plant!</H3>
         <p>
-            @Html.ActionLink("See all Plant", "PlantList")
+            @Html.ActionLink("No thanks.Give me the list of all plants", "PlantList")
         </p>
         <br>
         <br>
         <br>
     </div>
-    <div class="col-0 col-md-2">
+    <div class="col-0 col-md-6" style="background:white">
         <br>
+        <p style="font-size:16px;">1. What type plants do you want to pant?</p>
+        <div class="form-check form-check-inline" style="padding-top:5px;padding-bottom:10PX;">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+            <label class="form-check-label" for="defaultCheck1">
+                Tree
+            </label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+            <label class="form-check-label" for="defaultCheck2">
+                Shrub
+            </label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="defaultCheck3">
+                Creeper
+            </label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+            <label class="form-check-label" for="defaultCheck4">
+                Grass
+            </label>
+        </div>
+        <div>
+            <p style="font-size:16px;">2. How many times would you like to water your plants?</p>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios1" value="option1" checked>
+                <label class="form-check-label" for="exampeRadios1">Every two days</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios2" value="option2" checked>
+                <label class="form-check-label" for="exampeRadios2">Once a week</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios3" value="option3" checked>
+                <label class="form-check-label" for="exampeRadios3">Once a month</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios4" value="option4" checked>
+                <label class="form-check-label" for="exampeRadios4">All good for me</label>
+            </div>
+        </div>
+        <div>
+            <p style="font-size:16px;">3. When do you plan to plants?</p>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios1" value="option1" checked>
+                <label class="form-check-label" for="exampeRadios1">Spring</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios2" value="option2" checked>
+                <label class="form-check-label" for="exampeRadios2">Summer</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios3" value="option3" checked>
+                <label class="form-check-label" for="exampeRadios3">Autumn</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios4" value="option4" checked>
+                <label class="form-check-label" for="exampeRadios4">Winter</label>
+            </div>
+        </div>
+        <div>
+            <p style="font-size:16px;">4. Enough sunshine in your garden?</p>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios1" value="option1" checked>
+                <label class="form-check-label" for="exampeRadios1">Yes</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRaios" id="exampleRadios2" value="option2" checked>
+                <label class="form-check-label" for="exampeRadios2">No</label>
+            </div>
+        </div>
+        <p style="font-size:16px">5. Which color do you prefer?</p>
+        <div class="form-check form-check-inline" style="padding-top:5px;padding-bottom:10PX;">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+            <label class="form-check-label" for="defaultCheck1">
+                White
+            </label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+            <label class="form-check-label" for="defaultCheck2">
+                Green
+            </label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="defaultCheck3">
+                Yellow
+            </label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+            <label class="form-check-label" for="defaultCheck4">
+                Purple
+            </label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+            <label class="form-check-label" for="defaultCheck5">
+                Pink
+            </label>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
+            <label class="form-check-label" for="defaultCheck6">
+                Blue
+            </label>
+        </div>
     </div>
 </div>
