--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -56,9 +56,12 @@
 }
 
 <!--Plant display-->
-<div class="row">
-    <div class="col-7 col-md-4" style="background:url(../Picture/header_picture.jpg);border-radius:10px;box-shadow:0px 0px 10px grey inset">
-        <div style="padding-top:70%;font-size:12px;color:white;border-radius:10px;background-color:transparent;font-family:'Arial'">plant name</div>
+<div class="card-deck">
+    <div class="card">
+        <img class="card-img-top" src="" alt="plant picture">
+        <div class="card-body">
+            <h5 class="card-title">plant name</h5>
+        </div>
     </div>
 </div>
 
