--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -20,112 +20,50 @@
     </div>
 </div>
 
-<h2>Index</h2>
+<div class="row" style="padding:50px;background-color:#011f35">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-
-@using (Ajax.BeginForm("GetPlantData", ajaxOpts))
-{
-    <div>
-        <h4>Plant type</h4>
-        @Ajax.ActionLink("Trees", "GetPlantData", new { selected = "Trees" },
+    @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
+    {
+        <div>
+            <h4>Plant type</h4>
+            @Ajax.ActionLink("Trees", "GetPlantData", new { selected = "Trees" },
+                         new AjaxOptions { UpdateTargetId = "tableBody" });
+            @Ajax.ActionLink("Grass", "GetPlantData", new { selected = "Small Plants" },
                      new AjaxOptions { UpdateTargetId = "tableBody" });
-        @Ajax.ActionLink("Grass", "GetPlantData", new { selected = "Small Plants" },
+            @Ajax.ActionLink("Shrubs", "GetPlantData", new { selected = "Shrubs" },
+                     new AjaxOptions { UpdateTargetId = "tableBody" });
+            @Ajax.ActionLink("Creepers", "GetPlantData", new { selected = "Creepers" },
+                     new AjaxOptions { UpdateTargetId = "tableBody" });
+            @Ajax.ActionLink("All Plant", "GetPlantData", new { selected = "All Plant" },
+                     new AjaxOptions { UpdateTargetId = "tableBody" });
+            <br>
+            <h4>Plant season</h4>
+            @Ajax.ActionLink("Spring", "GetPlantData", new { selected = "Spring" },
                  new AjaxOptions { UpdateTargetId = "tableBody" });
-        @Ajax.ActionLink("Shrubs", "GetPlantData", new { selected = "Shrubs" },
+            @Ajax.ActionLink("Summer", "GetPlantData", new { selected = "Summer" },
                  new AjaxOptions { UpdateTargetId = "tableBody" });
-        @Ajax.ActionLink("Creepers", "GetPlantData", new { selected = "Creepers" },
-                 new AjaxOptions { UpdateTargetId = "tableBody" });
-        @Ajax.ActionLink("All Plant", "GetPlantData", new { selected = "All Plant" },
-                 new AjaxOptions { UpdateTargetId = "tableBody" });
-        <br>
-        <h4>Plant season</h4>
-        @Ajax.ActionLink("Spring", "GetPlantData", new { selected = "Spring" },
-             new AjaxOptions { UpdateTargetId = "tableBody" });
-        @Ajax.ActionLink("Summer", "GetPlantData", new { selected = "Summer" },
-             new AjaxOptions { UpdateTargetId = "tableBody" });
-        @Ajax.ActionLink("Autumn", "GetPlantData", new { selected = "Autumn" },
-                 new AjaxOptions { UpdateTargetId = "tableBody" });
-        @Ajax.ActionLink("Winter", "GetPlantData", new { selected = "Winter" },
-                 new AjaxOptions { UpdateTargetId = "tableBody" });
-        @Ajax.ActionLink("All Year", "GetPlantData", new { selected = "All Year" },
-                 new AjaxOptions { UpdateTargetId = "tableBody" });
-    </div>
-}
-
-<!--Plant display-->
-<div class="row">
-    <div class="col-7 col-md-4" style="background:url(../Picture/header_picture.jpg);border-radius:10px;box-shadow:0px 0px 10px grey inset">
-        <div style="padding-top:70%;font-size:12px;color:white;border-radius:10px;background-color:transparent;font-family:'Arial'">plant name</div>
-    </div>
-</div>
-
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantCommonName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantSciName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantPhotoPath)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantSpring)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantSummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantAutumn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantWinter)
-        </th>
-        <th></th>
-    </tr>
-
+            @Ajax.ActionLink("Autumn", "GetPlantData", new { selected = "Autumn" },
+                     new AjaxOptions { UpdateTargetId = "tableBody" });
+            @Ajax.ActionLink("Winter", "GetPlantData", new { selected = "Winter" },
+                     new AjaxOptions { UpdateTargetId = "tableBody" });
+            @Ajax.ActionLink("All Year", "GetPlantData", new { selected = "All Year" },
+                     new AjaxOptions { UpdateTargetId = "tableBody" });
+        </div>
+    }
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlantCommonName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlantSciName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlantPhotoPath)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlantType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlantSpring)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlantSummer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlantAutumn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlantWinter)
-            </td>
-
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
+        <!--Plant display-->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card" style="padding:15px;width:280px;margin-top:20px;">
+                <a href="@Url.Content("PlantSets/Details/"+ item.Id)" class="thumbnail">
+                    <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail">
+                    <div class="caption">
+                        <p>@Html.DisplayFor(modelItem => item.PlantCommonName)</p>
+                        <p>@Html.DisplayFor(modelItem => item.PlantSciName)</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     }
-
-</table>
+</div>        
