Update css file

--- a/PlottedAssist/Content/Site.css
+++ b/PlottedAssist/Content/Site.css
@@ -1,6 +1,11 @@
-﻿body {
+﻿html {
+    height: 100%;
+}
+
+body{
     padding-top: 50px;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
+    height: 100vh;
 }
 
 /* Remove the padding of the default bootstrap setting*/
