--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="~/Home/index.html" style="padding:0px;"><img id="logo" src="~/Picture/logo.png" height="50"></a>           
+                <a class="navbar-brand" href="~/Home/index.html" style="padding-top:0px;"><img id="logo" src="~/Picture/logo.png" height="50"></a>           
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -32,14 +32,13 @@
     </div>
     <div class="container-fluid body-content" style="padding-right:0px;padding-left:0px;">
         @RenderBody()
-    </div>
-    <div class="container-fluid body-content" style="padding-right:0px;padding-left:0px;">
-        <footer style="background-color:black;margin:0px">
+        <footer style="background-color:black;">
             <br>
             <p style="text-align:center;">&copy; @DateTime.Now.Year - Plotted Assist</p>
             <br>
         </footer>
     </div>
+    
     
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
