--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -5,54 +5,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Have you ever see these plant</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.PlantSet.PlantCommonName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WeedCommonName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WeedSciName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WeedPhotoPath)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WeedDesc)
-        </th>
-        <th></th>
-    </tr>
+<div class="row">
+@foreach (var item in Model)
+{
+    <!--Weed display-->
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.PlantSet.PlantCommonName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WeedCommonName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WeedSciName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WeedPhotoPath)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WeedDesc)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+    <div class="col-xs-6 col-sm-3 col-md-2">
+        <div class="card" style="padding:15px;width:200px;margin-top:20px;">
+            <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail">
+                <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail">
+            </a>
+        </div>
+    </div>
 }
-
-</table>
+</div>
